<resources>

    <string name="app_name">JavaCapstoneApp</string>

    section names...
    <string name="section01_Name">Workplace Safety</string>
    <string name="section02_Name">Occupational Health and Safety</string>
    <string name="section03_Name">Human Rights</string>
    <string name="section04_Name">Employment Standards</string>
    <string name="section05_Name">Navigating the System</string>
    <string name="section06_Name">Resources</string>
    <string name="disclaimer_paragrah">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id sapien lectus. Ut malesuada euismod dolor. Nunc euismod pulvinar nisl, ut euismod justo cursus at. Integer ut faucibus elit. Mauris mauris urna, semper ut tincidunt a, accumsan et odio. Vivamus hendrerit, ante vitae malesuada maximus, eros tortor tempus nunc, nec aliquet justo nunc ac purus. Integer sollicitudin, justo sit amet laoreet accumsan, erat quam molestie odio, sed ornare sem augue id mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque feugiat viverra turpis eget tempus. </string>
    <string name="funders_paragrah_one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id sapien lectus. Ut malesuada euismod dolor. Nunc euismod pulvinar nisl, ut euismod justo cursus at. Integer ut faucibus elit. Mauris mauris urna, semper ut tincidunt a, accumsan et odio. Vivamus hendrerit, ante vitae malesuada maximus, eros tortor tempus nunc, nec aliquet justo nunc ac purus. Integer sollicitudin, justo sit amet laoreet accumsan, erat quam molestie odio, sed ornare sem augue id mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque feugiat viverra turpis eget tempus. </string>
    <string name="funders_paragrah_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id sapien lectus. Ut malesuada euismod dolor. Nunc euismod pulvinar nisl, ut euismod justo cursus at. Integer ut faucibus elit. Mauris mauris urna, semper ut tincidunt a, accumsan et odio. Vivamus hendrerit, ante vitae malesuada maximus, eros tortor tempus nunc, nec aliquet justo nunc ac purus. Integer sollicitudin, justo sit amet laoreet accumsan, erat quam molestie odio, sed ornare sem augue id mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque feugiat viverra turpis eget tempus.</string>
    <string name="alberta_employment_standards">https://www.alberta.ca/alberta-employment-standards-rules.aspx
   </string>

    <string name="alberta_act">http://www.qp.alberta.ca/documents/Acts/E09.pdf</string>
    <string name="emplpyment_standard_regulation">http://www.qp.alberta.ca/documents/Regs/1997_014.pdf</string>
    <string name="alberta_emp_standards">https://www.alberta.ca/alberta-employment-standards-rules.aspx</string>
    For WEB BUTTON strings
    <string name="web_btn_close">x</string>
    <string name="web_btn_back">&lt;</string>
    <string name="web_btn_forward">&gt;</string>

    <!-- Nigam strings -->


    <string name="employment_standard_regulation">
        https://www.qp.alberta.ca/documents/Regs/1997_014.pdf
    </string>


    <!-- Sagar strings -->
    <string name="hr_acts">
        http://www.qp.alberta.ca/documents/Acts/A25P5.pdf
    </string>
    <string name="hr_commission">
      https://www.albertahumanrights.ab.ca/Documents/GuideProcess_Complainants.pdf
    </string>


    <!-- Twinkle strings -->
    <string name="Resources_linkAlberta">
        <a href="http://www.workershealthcentre.ca/">Alberta Worker Health Center</a>
    </string>
    <string name="Resources_linkCalgary">
        <a href="http://www.helpwrc.org/">Calgary Workers Resource Centre</a>
    </string>
    <string name="resources">Resources</string>
    <string name="para1">The Alberta Worker’s Health Centre and Calgary Workers Resource Centre provide free of charge help for people who have issues with health and safety and worker rights:</string>
    <string name="para2">Services are free of charge. Provides a first point of contact for workers facing occupational health and safety issues in their workplace. Will provide support, public legal education, and referrals.</string>
    <string name="para3">Provides free case work and public legal education program if you are having issues accessing your rights in your workplace</string>
    <string name="dial">Dial</string>


    <!-- Neil strings -->
    <string name="intro">
        A safe workplace takes your physical, mental, and emotional safety into consideration. Your safety at work is protected by 3 pieces of legislation:
    </string>


    <!-- Victor strings -->
    <string name="toGoLink"><u><i>Health and Safety Rights</i></u></string>
    <string name="intro_message">Most workers are in Alberta are covered under the Alberta Health and Safety Act, Regulation and Code.
        Some workers, such as federal workers, live in care-givers, or farm workers may have their own separate
        legislation. The laws are the minimum standards for protecting workers, and involve both workers and
        employers.</string>
    <string name="ohs_message">Current Legislation</string>
    <string name="ohs_link"><u><i>Current legislation: https://www.alberta.ca/ohs-act-regulation-code.aspx</i></u></string>
    <string name="ohs_meaning">Occupational Health and Safety</string>
    <string name="workers_right">As workers, we have legal responsibility to follow the health and safety rules, to not cause or participate in harassment, bullying, or violence, and to report unsafe work conditions. Although it is not always easy to do so, failure to do so can have serious consequences (such as undocumented injuries, or workplaces that remain unsafe)</string>
    <!--Splash Screen Strings-->
    <string name="splash_message">School of \n Global Access</string>
    <string name="logo_contentDescription">finding your voice knowing your rights logo</string>
    <string name="dialog_header">Welcome!</string>
    <string name="dialog_subHeader">Disclaimer:</string>
    <string name="dialog_btn_agree">I Agree!</string>
    <string name="dialog_btn_close_contentDescription">X</string>

    <!--Navigation String -->
    <string name="homeTxt">Home</string>
    <string name="findYourVoiceTxt">Finding your voice</string>
    <string name="WorkplaceSafetyTxt">Know Your Right and Workplace Safety</string>
    <string name="eSTxt">Employment Standards</string>
    <string name="hRTxt">Human Rights</string>
    <string name="oHSTxt">Occupational Health and Safety</string>
    <string name="resourcesTxt">Resources</string>
    <string name="fundTxt">Fund</string>
    <string name="disclaimerTxt">Disclaimer</string>

    <string name="not_found">not found</string>
    <string name="finding_your_voice_txt">Finding Your Voice</string>
    <string name="resources_txt">Resources</string>

    <!--Confirming Exit-->
    <string name="exit_txt">EXIT?</string>
    <string name="sure_txt">Are you sure you want to close the app?</string>
    <string name="yes_txt">YES</string>
    <string name="no_txt">NO</string>


    <!--Navigation Strings that are now queried from the database -->
    <!--    <string name="homeTxt">Home</string>-->
    <!--    <string name="findYourVoiceTxt">Finding your voice</string>-->
    <!--    <string name="eSTxt">Employment Standards</string>-->
    <!--    <string name="hRTxt">Human Rights</string>-->
    <!--    <string name="oHSTxt">Occupational Health and Safety</string>-->
    <!--    <string name="resourcesTxt">Resources</string>-->
    <!--    <string name="fundTxt">Fund</string>-->
    <!--    <string name="disclaimerTxt">Disclaimer</string>-->
    <!--    <string name="WorkplaceSafetyTxt">Workplace Safety</string>-->
    <!--    <string name="dialog_context">The purpose of this app is solely to educate workers about workplace health and safety regulations, general advice and guidance on your rights, and the services available to you. None of this information is intended to be used in a legal way.</string>-->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workplaceHazards_subtitle">There are 4 hazards that relate to workplace health and safety</string>


</resources>
